[package]
name = "exifmv"
version = "0.4.2"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Moves images into a folder hierarchy based on EXIF tags"
keywords = ["graphics", "images", "organzing", "sorting", "exif"]
categories = [
    "command-line-utilities",
    "graphics",
    "multimedia::images",
    "filesystem",
]
exclude = [".github/**/*", "test/**/*"]
readme = "README.md"
documentation = "https://docs.rs/exifmv/"
repository = "https://github.com/virtualritz/exifmv/"

[badges]
maintenance = { status = "passively-maintained" }

[[bin]]
name = "exifmv"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["cargo"] }
kamadak-exif = "0.6"
log = "0.4"
rayon = "1"
simplelog = "0.12"
trash = "5"
walkdir = "2"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
