[package]
name = "exifmv"
version = "0.5.1"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Moves images into a folder hierarchy based on EXIF tags"
keywords = ["graphics", "images", "organzing", "sorting", "exif"]
categories = [
    "command-line-utilities",
    "graphics",
    "multimedia::images",
    "filesystem",
]
exclude = [".github/**/*", "test/**/*"]
readme = "README.md"
documentation = "https://docs.rs/exifmv/"
repository = "https://github.com/virtualritz/exifmv/"

[badges]
maintenance = { status = "passively-maintained" }

[[bin]]
name = "exifmv"
path = "src/main.rs"

[features]
default = ["color"]
color = ["clap/color"]

[dependencies]
anyhow = "1"
ariadne = "0.6"
chrono = "0.4"
clap = { version = "4", features = ["cargo"] }
confy = "2"
kamadak-exif = "0.6"
log = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
toml = "0.9"
trash = "5"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
